// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default setup 1`] = `
Object {
  "Resources": Object {
    "DependencyCheckCheckProject0C2A0857": Object {
      "Properties": Object {
        "Artifacts": Object {
          "Type": "NO_ARTIFACTS",
        },
        "Cache": Object {
          "Modes": Array [
            "LOCAL_CUSTOM_CACHE",
          ],
          "Type": "LOCAL",
        },
        "Environment": Object {
          "ComputeType": "BUILD_GENERAL1_SMALL",
          "Image": "aws/codebuild/standard:2.0",
          "PrivilegedMode": false,
          "Type": "LINUX_CONTAINER",
        },
        "ServiceRole": Object {
          "Fn::GetAtt": Array [
            "DependencyCheckCheckProjectRoleE1C5A099",
            "Arn",
          ],
        },
        "Source": Object {
          "BuildSpec": Object {
            "Fn::Join": Array [
              "",
              Array [
                "{
  \\"version\\": \\"0.2\\",
  \\"env\\": {
    \\"git-credential-helper\\": \\"yes\\"
  },
  \\"phases\\": {
    \\"install\\": {
      \\"commands\\": [
        \\"echo \\\\\\"[===== Install OWASP Dependency Check =====]\\\\\\"\\",
        \\"curl -L https://dl.bintray.com/jeremy-long/owasp/dependency-check-5.3.0-release.zip -o dependency-check.zip\\",
        \\"unzip dependency-check.zip -d \\\\\\"/opt\\\\\\"\\",
        \\"chmod +x /opt/dependency-check/bin/dependency-check.sh\\",
        \\"export PATH=\\\\\\"$PATH:/opt/dependency-check/bin\\\\\\"\\",
        \\"mkdir reports\\"
      ]
    },
    \\"pre_build\\": {
      \\"commands\\": [
        \\"echo \\\\\\"[===== Clone repository: repo1 =====]\\\\\\"\\",
        \\"git clone \\\\\\"https://git-codecommit.",
                Object {
                  "Ref": "AWS::Region",
                },
                ".",
                Object {
                  "Ref": "AWS::URLSuffix",
                },
                "/v1/repos/repo1\\\\\\"\\",
        \\"cd repo1\\",
        \\"echo \\\\\\"No preCheckCommand!\\\\\\"\\",
        \\"cd \${CODEBUILD_SRC_DIR}\\"
      ]
    },
    \\"build\\": {
      \\"commands\\": [
        \\"echo \\\\\\"[===== Scan repository: repo1 =====]\\\\\\"\\",
        \\"dependency-check.sh --version\\",
        \\"dependency-check.sh --project \\\\\\"repo1\\\\\\" --scan \\\\\\"repo1/\\\\\\" --failOnCVSS 5 --prettyPrint --format \\\\\\"ALL\\\\\\" --out reports\\"
      ]
    }
  },
  \\"reports\\": {
    \\"dependencyCheckReport\\": {
      \\"files\\": [
        \\"reports/dependency-check-junit.xml\\"
      ]
    }
  },
  \\"cache\\": {
    \\"paths\\": [
      \\"/opt/dependency-check/data/**/*\\"
    ]
  }
}",
              ],
            ],
          },
          "Type": "NO_SOURCE",
        },
      },
      "Type": "AWS::CodeBuild::Project",
    },
    "DependencyCheckCheckProjectEventsRoleA29AB9F6": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "DependencyCheckCheckProjectEventsRoleDefaultPolicyF52B6F8E": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "codebuild:StartBuild",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "DependencyCheckCheckProject0C2A0857",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "DependencyCheckCheckProjectEventsRoleDefaultPolicyF52B6F8E",
        "Roles": Array [
          Object {
            "Ref": "DependencyCheckCheckProjectEventsRoleA29AB9F6",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "DependencyCheckCheckProjectRoleDefaultPolicyA4AD8ACB": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "DependencyCheckCheckProject0C2A0857",
                      },
                    ],
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "DependencyCheckCheckProject0C2A0857",
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "codecommit:BatchGet*",
                "codecommit:Get*",
                "codecommit:Describe*",
                "codecommit:List*",
                "codecommit:GitPull",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":codecommit:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":repo1",
                  ],
                ],
              },
            },
            Object {
              "Action": Array [
                "codebuild:CreateReportGroup",
                "codebuild:CreateReport",
                "codebuild:UpdateReport",
                "codebuild:BatchPutTestCases",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "DependencyCheckCheckProjectRoleDefaultPolicyA4AD8ACB",
        "Roles": Array [
          Object {
            "Ref": "DependencyCheckCheckProjectRoleE1C5A099",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "DependencyCheckCheckProjectRoleE1C5A099": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "codebuild.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "DependencyCheckScheduleRuleBC2D62E4": Object {
      "Properties": Object {
        "ScheduleExpression": "cron(0 4 * * ? *)",
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "DependencyCheckCheckProject0C2A0857",
                "Arn",
              ],
            },
            "Id": "Target0",
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "DependencyCheckCheckProjectEventsRoleA29AB9F6",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
  },
}
`;

exports[`events 1`] = `
Object {
  "Resources": Object {
    "CheckTopic79759998": Object {
      "Type": "AWS::SNS::Topic",
    },
    "CheckTopicPolicyF0CF133A": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sns:Publish",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
              "Resource": Object {
                "Ref": "CheckTopic79759998",
              },
              "Sid": "0",
            },
          ],
          "Version": "2012-10-17",
        },
        "Topics": Array [
          Object {
            "Ref": "CheckTopic79759998",
          },
        ],
      },
      "Type": "AWS::SNS::TopicPolicy",
    },
    "DependencyCheckCheckProject0C2A0857": Object {
      "Properties": Object {
        "Artifacts": Object {
          "Type": "NO_ARTIFACTS",
        },
        "Cache": Object {
          "Modes": Array [
            "LOCAL_CUSTOM_CACHE",
          ],
          "Type": "LOCAL",
        },
        "Environment": Object {
          "ComputeType": "BUILD_GENERAL1_SMALL",
          "Image": "aws/codebuild/standard:2.0",
          "PrivilegedMode": false,
          "Type": "LINUX_CONTAINER",
        },
        "ServiceRole": Object {
          "Fn::GetAtt": Array [
            "DependencyCheckCheckProjectRoleE1C5A099",
            "Arn",
          ],
        },
        "Source": Object {
          "BuildSpec": Object {
            "Fn::Join": Array [
              "",
              Array [
                "{
  \\"version\\": \\"0.2\\",
  \\"env\\": {
    \\"git-credential-helper\\": \\"yes\\"
  },
  \\"phases\\": {
    \\"install\\": {
      \\"commands\\": [
        \\"echo \\\\\\"[===== Install OWASP Dependency Check =====]\\\\\\"\\",
        \\"curl -L https://dl.bintray.com/jeremy-long/owasp/dependency-check-5.3.0-release.zip -o dependency-check.zip\\",
        \\"unzip dependency-check.zip -d \\\\\\"/opt\\\\\\"\\",
        \\"chmod +x /opt/dependency-check/bin/dependency-check.sh\\",
        \\"export PATH=\\\\\\"$PATH:/opt/dependency-check/bin\\\\\\"\\",
        \\"mkdir reports\\"
      ]
    },
    \\"pre_build\\": {
      \\"commands\\": [
        \\"echo \\\\\\"[===== Clone repository: repo1 =====]\\\\\\"\\",
        \\"git clone \\\\\\"https://git-codecommit.",
                Object {
                  "Ref": "AWS::Region",
                },
                ".",
                Object {
                  "Ref": "AWS::URLSuffix",
                },
                "/v1/repos/repo1\\\\\\"\\",
        \\"cd repo1\\",
        \\"echo \\\\\\"No preCheckCommand!\\\\\\"\\",
        \\"cd \${CODEBUILD_SRC_DIR}\\"
      ]
    },
    \\"build\\": {
      \\"commands\\": [
        \\"echo \\\\\\"[===== Scan repository: repo1 =====]\\\\\\"\\",
        \\"dependency-check.sh --version\\",
        \\"dependency-check.sh --project \\\\\\"repo1\\\\\\" --scan \\\\\\"repo1/\\\\\\" --failOnCVSS 5 --prettyPrint --format \\\\\\"ALL\\\\\\" --out reports\\"
      ]
    }
  },
  \\"reports\\": {
    \\"dependencyCheckReport\\": {
      \\"files\\": [
        \\"reports/dependency-check-junit.xml\\"
      ]
    }
  },
  \\"cache\\": {
    \\"paths\\": [
      \\"/opt/dependency-check/data/**/*\\"
    ]
  }
}",
              ],
            ],
          },
          "Type": "NO_SOURCE",
        },
      },
      "Type": "AWS::CodeBuild::Project",
    },
    "DependencyCheckCheckProjectEventsRoleA29AB9F6": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "DependencyCheckCheckProjectEventsRoleDefaultPolicyF52B6F8E": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "codebuild:StartBuild",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "DependencyCheckCheckProject0C2A0857",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "DependencyCheckCheckProjectEventsRoleDefaultPolicyF52B6F8E",
        "Roles": Array [
          Object {
            "Ref": "DependencyCheckCheckProjectEventsRoleA29AB9F6",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "DependencyCheckCheckProjectRoleDefaultPolicyA4AD8ACB": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "DependencyCheckCheckProject0C2A0857",
                      },
                    ],
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "DependencyCheckCheckProject0C2A0857",
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "codecommit:BatchGet*",
                "codecommit:Get*",
                "codecommit:Describe*",
                "codecommit:List*",
                "codecommit:GitPull",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":codecommit:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":repo1",
                  ],
                ],
              },
            },
            Object {
              "Action": Array [
                "codebuild:CreateReportGroup",
                "codebuild:CreateReport",
                "codebuild:UpdateReport",
                "codebuild:BatchPutTestCases",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "DependencyCheckCheckProjectRoleDefaultPolicyA4AD8ACB",
        "Roles": Array [
          Object {
            "Ref": "DependencyCheckCheckProjectRoleE1C5A099",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "DependencyCheckCheckProjectRoleE1C5A099": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "codebuild.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "DependencyCheckCheckProjectfailedF8999842": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "build-status": Array [
              "FAILED",
            ],
            "project-name": Array [
              Object {
                "Ref": "DependencyCheckCheckProject0C2A0857",
              },
            ],
          },
          "detail-type": Array [
            "CodeBuild Build State Change",
          ],
          "source": Array [
            "aws.codebuild",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Ref": "CheckTopic79759998",
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "DependencyCheckCheckProjectstartedA3737150": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "build-status": Array [
              "IN_PROGRESS",
            ],
            "project-name": Array [
              Object {
                "Ref": "DependencyCheckCheckProject0C2A0857",
              },
            ],
          },
          "detail-type": Array [
            "CodeBuild Build State Change",
          ],
          "source": Array [
            "aws.codebuild",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Ref": "CheckTopic79759998",
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "DependencyCheckCheckProjectsucceeded0DA39213": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "build-status": Array [
              "SUCCEEDED",
            ],
            "project-name": Array [
              Object {
                "Ref": "DependencyCheckCheckProject0C2A0857",
              },
            ],
          },
          "detail-type": Array [
            "CodeBuild Build State Change",
          ],
          "source": Array [
            "aws.codebuild",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Ref": "CheckTopic79759998",
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "DependencyCheckScheduleRuleBC2D62E4": Object {
      "Properties": Object {
        "ScheduleExpression": "cron(0 4 * * ? *)",
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "DependencyCheckCheckProject0C2A0857",
                "Arn",
              ],
            },
            "Id": "Target0",
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "DependencyCheckCheckProjectEventsRoleA29AB9F6",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
  },
}
`;

exports[`preCheckCommand 1`] = `
Object {
  "Resources": Object {
    "DependencyCheckCheckProject0C2A0857": Object {
      "Properties": Object {
        "Artifacts": Object {
          "Type": "NO_ARTIFACTS",
        },
        "Cache": Object {
          "Modes": Array [
            "LOCAL_CUSTOM_CACHE",
          ],
          "Type": "LOCAL",
        },
        "Environment": Object {
          "ComputeType": "BUILD_GENERAL1_SMALL",
          "Image": "aws/codebuild/standard:2.0",
          "PrivilegedMode": false,
          "Type": "LINUX_CONTAINER",
        },
        "ServiceRole": Object {
          "Fn::GetAtt": Array [
            "DependencyCheckCheckProjectRoleE1C5A099",
            "Arn",
          ],
        },
        "Source": Object {
          "BuildSpec": Object {
            "Fn::Join": Array [
              "",
              Array [
                "{
  \\"version\\": \\"0.2\\",
  \\"env\\": {
    \\"git-credential-helper\\": \\"yes\\"
  },
  \\"phases\\": {
    \\"install\\": {
      \\"commands\\": [
        \\"echo \\\\\\"[===== Install OWASP Dependency Check =====]\\\\\\"\\",
        \\"curl -L https://dl.bintray.com/jeremy-long/owasp/dependency-check-5.3.0-release.zip -o dependency-check.zip\\",
        \\"unzip dependency-check.zip -d \\\\\\"/opt\\\\\\"\\",
        \\"chmod +x /opt/dependency-check/bin/dependency-check.sh\\",
        \\"export PATH=\\\\\\"$PATH:/opt/dependency-check/bin\\\\\\"\\",
        \\"mkdir reports\\"
      ]
    },
    \\"pre_build\\": {
      \\"commands\\": [
        \\"echo \\\\\\"[===== Clone repository: repo1 =====]\\\\\\"\\",
        \\"git clone \\\\\\"https://git-codecommit.",
                Object {
                  "Ref": "AWS::Region",
                },
                ".",
                Object {
                  "Ref": "AWS::URLSuffix",
                },
                "/v1/repos/repo1\\\\\\"\\",
        \\"cd repo1\\",
        \\"npm i\\",
        \\"cd \${CODEBUILD_SRC_DIR}\\"
      ]
    },
    \\"build\\": {
      \\"commands\\": [
        \\"echo \\\\\\"[===== Scan repository: repo1 =====]\\\\\\"\\",
        \\"dependency-check.sh --version\\",
        \\"dependency-check.sh --project \\\\\\"repo1\\\\\\" --scan \\\\\\"repo1/\\\\\\" --failOnCVSS 5 --prettyPrint --format \\\\\\"ALL\\\\\\" --out reports\\"
      ]
    }
  },
  \\"reports\\": {
    \\"dependencyCheckReport\\": {
      \\"files\\": [
        \\"reports/dependency-check-junit.xml\\"
      ]
    }
  },
  \\"cache\\": {
    \\"paths\\": [
      \\"/opt/dependency-check/data/**/*\\"
    ]
  }
}",
              ],
            ],
          },
          "Type": "NO_SOURCE",
        },
      },
      "Type": "AWS::CodeBuild::Project",
    },
    "DependencyCheckCheckProjectEventsRoleA29AB9F6": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "DependencyCheckCheckProjectEventsRoleDefaultPolicyF52B6F8E": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "codebuild:StartBuild",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "DependencyCheckCheckProject0C2A0857",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "DependencyCheckCheckProjectEventsRoleDefaultPolicyF52B6F8E",
        "Roles": Array [
          Object {
            "Ref": "DependencyCheckCheckProjectEventsRoleA29AB9F6",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "DependencyCheckCheckProjectRoleDefaultPolicyA4AD8ACB": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "DependencyCheckCheckProject0C2A0857",
                      },
                    ],
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "DependencyCheckCheckProject0C2A0857",
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "codecommit:BatchGet*",
                "codecommit:Get*",
                "codecommit:Describe*",
                "codecommit:List*",
                "codecommit:GitPull",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":codecommit:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":repo1",
                  ],
                ],
              },
            },
            Object {
              "Action": Array [
                "codebuild:CreateReportGroup",
                "codebuild:CreateReport",
                "codebuild:UpdateReport",
                "codebuild:BatchPutTestCases",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "DependencyCheckCheckProjectRoleDefaultPolicyA4AD8ACB",
        "Roles": Array [
          Object {
            "Ref": "DependencyCheckCheckProjectRoleE1C5A099",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "DependencyCheckCheckProjectRoleE1C5A099": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "codebuild.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "DependencyCheckScheduleRuleBC2D62E4": Object {
      "Properties": Object {
        "ScheduleExpression": "cron(0 4 * * ? *)",
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "DependencyCheckCheckProject0C2A0857",
                "Arn",
              ],
            },
            "Id": "Target0",
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "DependencyCheckCheckProjectEventsRoleA29AB9F6",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
  },
}
`;
